tests/baselines/reference/overloadresolutionWithConstraintCheckingDeferred.errors.txt
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(14,5): error TS2323: Type 'string' is not assignable to type 'number'.
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(14,37): error TS2345: Argument of type 'D' is not assignable to parameter of type 'A'.
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(16,27): error TS2345: Argument of type '(x: D) => G<D>' is not assignable to parameter of type '(x: B) => any'.
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(16,38): error TS2344: Type 'D' does not satisfy the constraint 'A'.
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(18,27): error TS2345: Argument of type '(x: D) => G<D>' is not assignable to parameter of type '(x: B) => any'.
tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts(19,12): error TS2344: Type 'D' does not satisfy the constraint 'A'.


==== tests/cases/compiler/overloadresolutionWithConstraintCheckingDeferred.ts (6 errors) ====
    interface A { x }
    interface B { x; y }
    interface C { z }
    interface D { q }
    
    class G<T extends A> {
        constructor(x: T) { }
    }
    
    declare function foo(arg: (x: D) => number): string;
    declare function foo(arg: (x: C) => any): string;
    declare function foo(arg: (x: B) => any): number;
    
    var result: number = foo(x => new G(x)); // No error, returns number
        ~~~~~~
!!! error TS2323: Type 'string' is not assignable to type 'number'.
                                        ~
!!! error TS2345: Argument of type 'D' is not assignable to parameter of type 'A'.
    
    var result2: number = foo(x => new G<typeof x>(x)); // No error, returns number
                              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: D) => G<D>' is not assignable to parameter of type '(x: B) => any'.
                                         ~~~~~~~~
!!! error TS2344: Type 'D' does not satisfy the constraint 'A'.
    
    var result3: string = foo(x => { // returns string because the C overload is picked
                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        var y: G<typeof x>; // error that C does not satisfy constraint
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
               ~~~~~~~~~~~
!!! error TS2344: Type 'D' does not satisfy the constraint 'A'.
        return y;
    ~~~~~~~~~~~~~
    });
    ~
!!! error TS2345: Argument of type '(x: D) => G<D>' is not assignable to parameter of type '(x: B) => any'.
    